salesforce/force-app/main/default/objects/Convex_Connection__c/Convex_Connection__c.object-meta.xml
<CustomObject>
    <description>Stores Convex OAuth connection state including access tokens and project info</description>
    <label>Convex Connection</label>
    <nameField>
        <displayFormat>CONN-{0000}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convex Connections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>