salesforce/force-app/main/default/objects/Convex_Connection__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>OAuth access token from Convex</description>
    <label>Access Token</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>