salesforce/force-app/main/default/objects/Convex_Connection__c/fields/Connected_At__c.field-meta.xml
<CustomField>
    <fullName>Connected_At__c</fullName>
    <description>When the OAuth connection was established</description>
    <label>Connected At</label>
    <type>DateTime</type>
</CustomField>