salesforce/force-app/main/default/objects/Convex_Connection__c/fields/Deployment_URL__c.field-meta.xml
<CustomField>
    <fullName>Deployment_URL__c</fullName>
    <description>Convex deployment URL</description>
    <label>Deployment URL</label>
    <type>Url</type>
</CustomField>