salesforce/force-app/main/default/objects/Convex_Connection__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this connection is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>