salesforce/force-app/main/default/objects/Convex_Connection__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>Convex project ID</description>
    <externalId>true</externalId>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>