salesforce/force-app/main/default/objects/Convex_Connection__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Convex project name</description>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>