salesforce/force-app/main/default/objects/Convex_Connection__c/fields/Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Team_Id__c</fullName>
    <description>Convex team ID</description>
    <externalId>true</externalId>
    <label>Team Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>